# procpane

./: .gitignore  Cargo.toml  IDEAS.md  README.md
fixtures/demo/: package.json  pnpm-lock.yaml  procpane  procpane.toml  turbo.json
fixtures/demo/apps/api/: package.json  tsconfig.json
fixtures/demo/apps/api/src/: index.ts
fixtures/demo/apps/web/: index.html  package.json  tsconfig.json
fixtures/demo/apps/web/src/: main.ts
src/: buffer.rs  ca.rs  cli.rs  client.rs  config.rs  daemon.rs  graph.rs  healthcheck.rs  lock.rs  main.rs  process.rs  proto.rs  proxy.rs  secrets.rs  share.rs  sidecar.rs  workspace.rs
