[package]
name = "procpane"
version = "0.1.0"
edition = "2021"
description = "Agent-friendly process runner for turbo.json monorepos"
license = "MIT"

[[bin]]
name = "procpane"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
humantime = "2"
tokio = { version = "1", features = ["full"] }
petgraph = "0.6"
portable-pty = "0.8"
strip-ansi-escapes = "0.2"
globset = "0.4"
walkdir = "2"
dotenvy = "0.15"
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
regex = "1"
parking_lot = "0.12"
once_cell = "1"
ctrlc = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rpassword = "7"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
dirs = "5"
time = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
